package wr1ttenyu.f1nal.study.designpattern.pattern23.bridge;

interface IFunction {

    String call();

    String close();

    String open();
}
